--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
           </div>
         </div>
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center gap-3">
           <!-- Pricing Col-1 -->
           <div class="col-md-3">
             <div class="card bg-secondary text-center rounded-0">
